# trabalhos-de-grafos

./: .gitignore  LICENSE  README.md
Em andamento/caminhos/: LEIAME.txt  main
Em andamento/tmp/: fibonacciheap.h  main.cpp
caminhos/: main
caminhos/sources/: graph.cpp  graph.h
em andamento/caminhos/: Makefile
em andamento/mst/: test.sh
floyd_warshall/sources/: graph.h  graphmatrix.cpp  graphmatrix.h  main.cpp
mst/: CMakeLists.txt  LEIAME.txt  Makefile  main
mst-atualizada/database/: kruger_out.txt
mst-atualizada/sources/: disjoint_set.h  graph.cpp  graph.h  main.cpp
mst-bosta/database/: kruger_out.txt
mst-bosta/sources/: graph.h  kruskal.h  main.cpp
mst/database/: in.txt  kruger_in.txt  lu980_out.txt  out.txt  out_lu980.txt
mst/dataset/: lu980_out.txt
mst/sources/: DataStructs.cpp  DataStructs.h  Graph.cpp  Graph.h  Main.cpp  application.cpp  application.h  arrayheap.h  binaryheap.cpp  binaryheap.h  fibheap.cpp  fibheap.h  fibonacciheap.cpp  fibonacciheap.h  graph.cpp  graph.h  heap.cpp  heap.h  kruskal.cpp  kruskal.h  listset.cpp  listset.h  main  main.cpp  prim.cpp  test.txt  unionfind.h
mst_backup/database/: kruger_out.txt
mst_backup/sources/: disjoint_set.cpp  graph.cpp
mst_base/: CMakeLists.txt  LEIAME.txt
mst_base/sources/: DisjointSet.cpp  DisjointSet.h  Graph.cpp  Graph.h  Main.cpp  graph.cpp  graph.h
mst_funfando/: CMakeLists.txt
mst_rodrigo/: CMakeLists.txt
mst_submetida_t1/: main
smallest_path_one_source/: CMakeLists.txt
sort_example/: CMakeLists.txt  main.cpp
tmp/: fibhip  fibhip.cpp  heap.h  prim
(+114 files in other folders)
